0518 webcontent 프론트 수정

--- a/safproject/WebContent/test/header.html
+++ b/safproject/WebContent/test/header.html
@@ -1,12 +1,11 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="${pageContext.request.contextPath}/header/header.css">
+    <link rel="stylesheet" href="header.css">
     <title>main</title>
   </head>
   <body>
@@ -22,11 +21,11 @@
         <div class="g-hidden-xs-down">
             <!-- 탑바 레이아웃 3 -->
           <div class="container">
-            <div class="row-head flex-md-row justyfy-content-between">
+            <div class="row flex-md-row justyfy-content-between">
  
               <!-- 탑바 right 5-2 -->
               <div class="col-auto g-pos-rel g-px-15">
-                <ul class="ul list-inline g-mt-minus-10">
+                <ul class="list-inline g-mt-minus-10">
                   <li class="list-inline-item"><a class="g-color-topbar" href="${pageContext.request.contextPath}/login/login.jsp">로그인</a></li>
                   <li class="list-inline-item g-color-topbar">|</li>
                   <li class="list-inline-item"><a class="g-color-topbar" href="${pageContext.request.contextPath}/join/join.jsp">회원가입</a></li>
@@ -47,35 +46,35 @@
       <!-- 로고 -->
       <div class="container container-header header justyfy-content-between">
       <div class="header-logo">
-        <a href="${pageContext.request.contextPath}/mainpage/main.jsp"><img src="${pageContext.request.contextPath}/header/logo.svg" style="width: 240px; height: 60px;" alt="" class="logo"></a>
+        <img src="logo.svg" style="width: 240px; height: 60px;" alt="" class="logo">
       </div>
       <!-- 목차 -->
       <div class="header-menu mouseover" data-animaion-in="fadeIn" data-animation-out="fadeOut">
-        <ul class="ul mouseover">
+        <ul class="mouseover">
           <li class="list-inline-header">
             <a href=""style="text-decoration:none; ">소개</a>
           </li>
           <li class="list-inline-header">
             <a href="${pageContext.request.contextPath}/lostpet/LostPet.jsp"style="text-decoration:none; ">실종동물찾기</a>
-<%--             <ul class="showmenu list-drop">
+            <ul class="showmenu list-drop">
               <li class="hide-list"><a  class="drop-a"href="${pageContext.request.contextPath}/lostpet/find_write.jsp">동물 등록하기</a></li>
               <li class="hide-list"><a  class="drop-a"href="${pageContext.request.contextPath}/lostpet/LostPet.jsp">동물 / 주인 찾기</a></li>
-            </ul> --%>
+            </ul>
           </li>
           <li class="list-inline-header">
-            <a href="${pageContext.request.contextPath}/faq/faq.jsp"style="text-decoration:none; ">전문가FAQ</a>
+            <a href="/faq/faq.html"style="text-decoration:none; ">전문가FAQ</a>
           </li>
           <li class="list-inline-header">
-            <a href="${pageContext.request.contextPath}/board/new-list.jsp"style="text-decoration:none; ">커뮤니티</a>
-<%--             <ul class="showmenu list-drop">
+            <a href="/board/new-list.html"style="text-decoration:none; ">커뮤니티</a>
+            <ul class="showmenu list-drop">
               <li class="hide-list"><a  class="drop-a"href="${pageContext.request.contextPath}/board/new-list.jsp">소통해요</a></li>
               <li class="hide-list"><a  class="drop-a"href="${pageContext.request.contextPath}/board/new-list.jsp">내 반려동물 자랑</a></li>
-            </ul> --%>
+            </ul>
           </li>
         </ul>
         </div>
       </div>
-<!--     <div class="lnb-bg showmenu"> -->
+    <div class="lnb-bg showmenu">
     </div>
 </header>
 
